--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "graphql": "^15.4.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-js-pagination": "^3.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "use-state-if-mounted": "^1.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
